# mpl_animator

./: .gitignore  README.md  animator.py  lissajous_3d_static_animated.py  mpl_animator.py  pyproject.toml  test_animator.py  wave_static.py  wave_static_animated.py
examples/: lissajous_3d_static.py  orbit_static.py  wave_static.py  zoom_static.py
fixtures/: add_subplot_3d.py  augmented_assign.py  bar_chart.py  contour.py  histogram.py  implicit_figure.py  multi_subplot.py  simple_line.py
tests/: gallery_test_results.json  run_gallery_discovery.py  test_animator.py  test_gallery.py
tests/fixtures/: add_patch_circle.py  augmented_assign_loop.py  axes_2d_indexing.py  camera_cinematic.py  changing_text.py  conditional_style.py  dashboard_4panel.py  fill_between_where.py  for_loop_draw.py  from_mpl_import.py  func_def_in_script.py  heatmap.py  lambda_capture.py  latex_titles.py  list_comprehension.py  log_scale.py  mixed_3d_2d.py  moving_annotation.py  multi_3d_subplots.py  multi_assign.py  multi_var_2d.py  multiline_stmt.py  nested_tuple_axes.py  pandas_plot.py  polar.py  quiver_plot.py  rcparams.py  real_world_01.py  real_world_02.py  real_world_03.py  real_world_04.py  real_world_05.py  real_world_06.py  real_world_07.py  real_world_08.py  real_world_09.py  real_world_10.py  rotate_2d_polar.py  rotate_3d_scatter.py  rotate_3d_surface.py  (+12 more)
