[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-animator"
version = "0.1.0"
description = "Turn any static matplotlib script into an animated GIF by sweeping a variable"
authors = [{name = "Basem Rajjoub"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["matplotlib", "numpy", "Pillow"]

[project.scripts]
mpl-animator = "mpl_animator:main"

[tool.setuptools]
py-modules = ["mpl_animator"]
